--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,17 @@
             <artifactId>tapestry-yuicompressor</artifactId>
             <version>${tapestry-release-version}</version>
         </dependency>
+            <dependency>
+                <groupId>org.apache.tapestry</groupId>
+                <artifactId>tapestry-hibernate</artifactId>
+                <version>${tapestry-release-version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hsqldb</groupId>
+                <artifactId>hsqldb</artifactId>
+                <version>2.3.2</version>
+            </dependency>
 
         <!-- Uncomment this to add support for file uploads:
 
